--- a/TaxGenieOnline/TaxGenieOnline.csproj
+++ b/TaxGenieOnline/TaxGenieOnline.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Web.Mobile" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="admin\editnewsflash.aspx" />
     <Content Include="admin\editnotifications.aspx" />
     <Content Include="admin\HomeContentEditor.aspx" />
     <Content Include="admin\WhatsNew.aspx" />
@@ -187,6 +188,13 @@
     </Compile>
     <Compile Include="admin\editnews.aspx.designer.cs">
       <DependentUpon>editnews.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\editnewsflash.aspx.cs">
+      <DependentUpon>editnewsflash.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\editnewsflash.aspx.designer.cs">
+      <DependentUpon>editnewsflash.aspx</DependentUpon>
     </Compile>
     <Compile Include="admin\editnotifications.aspx.cs">
       <DependentUpon>editnotifications.aspx</DependentUpon>
