--- a/TaxGenieOnline/Web.config
+++ b/TaxGenieOnline/Web.config
@@ -166,6 +166,13 @@
 			</authorization>
 		</system.web>
 	</location>
+  <location path="search.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
 	<system.net>
 		<mailSettings>
 			<smtp from="taxgenieonline@gmail.com">
