DGFT Insert Table Adapter

--- a/TaxGenieOnline/WebConnectionStrings.config
+++ b/TaxGenieOnline/WebConnectionStrings.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0"?>
 
 <connectionStrings>
-  <add name="TaxGenieDB" connectionString="Data Source=.\sqlexpress;Initial Catalog=Dev_TaxGenie;Integrated Security=True"
+  <add name="TaxGenieDB" connectionString="Data Source=DESIGINER2-PC;Initial Catalog=Dev_TaxGenie;Integrated Security=True"
                  providerName="System.Data.SqlClient"/>
 </connectionStrings>
