update search,searchdata,index and home page image

--- a/TaxGenieOnline/Web.config
+++ b/TaxGenieOnline/Web.config
@@ -173,6 +173,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="searchdata.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
 	<system.net>
 		<mailSettings>
 			<smtp from="taxgenieonline@gmail.com">
