--- a/TaxGenieOnline/TaxGenieOnline.csproj
+++ b/TaxGenieOnline/TaxGenieOnline.csproj
@@ -37,7 +37,6 @@
   <ItemGroup>
     <Reference Include="AjaxControlToolkit">
       <HintPath>..\..\..\..\AjaxControlToolkitBinary\AjaxControlToolkit.dll</HintPath>
-      <HintPath>G:\AjaxControlToolkitBinary\AjaxControlToolkit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -77,6 +76,8 @@
     <Content Include="images\news.png" />
     <Content Include="images\psslogo.png" />
     <Content Include="images\sbrao.gif" />
+    <Content Include="images\Slide4.jpg" />
+    <Content Include="images\Slide5.jpg" />
     <Content Include="images\slogo.png" />
     <Content Include="images\TaxUpdate\Mark logo_web.png" />
     <Content Include="InterestTaxAct.htm" />
