add location path in web.config file for changepwd and editprofile

--- a/TaxGenie_DAL/app.config
+++ b/TaxGenie_DAL/app.config
@@ -4,13 +4,13 @@
     </configSections>
     <connectionStrings>
         <add name="TaxGenie_DAL.Properties.Settings.TaxGenieConnectionString"
-            connectionString="Data Source=DESIGINER2-PC;Initial Catalog=Dev_TaxGenie;Integrated Security=True"
+            connectionString="Data Source=USER30-PC\SQLEXPRESS;Initial Catalog=Dev_TaxGenie;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="TaxGenie_DAL.Properties.Settings.Prod_TaxGenieConnectionString"
-            connectionString="Data Source=DESIGINER2-PC;Initial Catalog=Dev_TaxGenie;Integrated Security=True"
+            connectionString="Data Source=USER30-PC\SQLEXPRESS;Initial Catalog=Dev_TaxGenie;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="TaxGenie_DAL.Properties.Settings.Dev_TaxGenieConnectionString"
-            connectionString="Data Source=DESIGINER2-PC;Initial Catalog=Dev_TaxGenie;Integrated Security=True"
+            connectionString="Data Source=USER30-PC\SQLEXPRESS;Initial Catalog=Dev_TaxGenie;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
