--- a/TaxGenieOnline/Web.config
+++ b/TaxGenieOnline/Web.config
@@ -180,6 +180,20 @@
       </authorization>
     </system.web>
   </location>
+  <location path="changepwd.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="editprofile.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
 	<system.net>
 		<mailSettings>
 			<smtp from="taxgenieonline@gmail.com">
