--- a/TaxGenie_DAL/app.config
+++ b/TaxGenie_DAL/app.config
@@ -4,13 +4,13 @@
     </configSections>
     <connectionStrings>
         <add name="TaxGenie_DAL.Properties.Settings.TaxGenieConnectionString"
-            connectionString="Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;Integrated Security=True"
+            connectionString="Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;User ID=sa;Password=pyramidinc"
             providerName="System.Data.SqlClient" />
         <add name="TaxGenie_DAL.Properties.Settings.Prod_TaxGenieConnectionString"
-            connectionString="Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;Integrated Security=True"
+            connectionString="Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;User ID=sa;Password=pyramidinc"
             providerName="System.Data.SqlClient" />
         <add name="TaxGenie_DAL.Properties.Settings.Dev_TaxGenieConnectionString"
-            connectionString="Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;Integrated Security=True"
+            connectionString="Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;User ID=sa;Password=pyramidinc"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
