--- a/TaxGenie_DAL/Properties/Settings.settings
+++ b/TaxGenie_DAL/Properties/Settings.settings
@@ -5,26 +5,26 @@
     <Setting Name="TaxGenieConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;User ID=sa;Password=pyramidinc&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=.\SQLEXPRESS;Initial Catalog=TaxGenie_Dev;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;User ID=sa;Password=pyramidinc</Value>
+      <Value Profile="(Default)">Data Source=.\SQLEXPRESS;Initial Catalog=TaxGenie_Dev;Integrated Security=True</Value>
     </Setting>
     <Setting Name="Prod_TaxGenieConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;User ID=sa;Password=pyramidinc&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=.\SQLEXPRESS;Initial Catalog=TaxGenie_Dev;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;User ID=sa;Password=pyramidinc</Value>
+      <Value Profile="(Default)">Data Source=.\SQLEXPRESS;Initial Catalog=TaxGenie_Dev;Integrated Security=True</Value>
     </Setting>
     <Setting Name="Dev_TaxGenieConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;User ID=sa;Password=pyramidinc&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=.\SQLEXPRESS;Initial Catalog=TaxGenie_Dev;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;User ID=sa;Password=pyramidinc</Value>
+      <Value Profile="(Default)">Data Source=.\SQLEXPRESS;Initial Catalog=TaxGenie_Dev;Integrated Security=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
