CaseLaw bugs and Home Page changes

--- a/TaxGenieOnline/TaxGenieOnline.csproj
+++ b/TaxGenieOnline/TaxGenieOnline.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Web.Mobile" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="admin\DocUploadToServer.aspx" />
     <Content Include="admin\editnewsflash.aspx" />
     <Content Include="admin\editnotifications.aspx" />
     <Content Include="admin\HomeContentEditor.aspx" />
@@ -190,6 +191,13 @@
     </Compile>
     <Compile Include="admin\Adminpage.aspx.designer.cs">
       <DependentUpon>Adminpage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\DocUploadToServer.aspx.cs">
+      <DependentUpon>DocUploadToServer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\DocUploadToServer.aspx.designer.cs">
+      <DependentUpon>DocUploadToServer.aspx</DependentUpon>
     </Compile>
     <Compile Include="admin\editflashnews.aspx.cs">
       <DependentUpon>editflashnews.aspx</DependentUpon>
@@ -525,9 +533,11 @@
     <Content Include="SION\sport-0910.zip" />
     <Content Include="SION\text-0910.zip" />
     <None Include="st-edu-guide.pdf" />
+    <None Include="TGOL\Documents\cx-manual.pdf" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="images\HomeContents\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TaxGenie_DAL\TaxGenie_DAL.csproj">
