--- a/TaxGenieOnline/TaxGenieOnline.csproj
+++ b/TaxGenieOnline/TaxGenieOnline.csproj
@@ -63,8 +63,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="admin\DocUploadToServer.aspx" />
+    <Content Include="admin\EditHomeContents.aspx" />
     <Content Include="admin\editnewsflash.aspx" />
     <Content Include="admin\editnotifications.aspx" />
+    <Content Include="admin\EditTaxUpdate.aspx" />
+    <Content Include="admin\EditWhatsNew.aspx" />
     <Content Include="admin\HomeContentEditor.aspx" />
     <Content Include="admin\WhatsNew.aspx" />
     <Content Include="adResult.aspx" />
@@ -153,6 +156,7 @@
     <Content Include="images\Twitter_32x32.png" />
     <Content Include="images\Twitter_48x48.png" />
     <Content Include="scripts\ddsmoothmenu.js" />
+    <Content Include="scripts\jquery-scroll.js" />
     <Content Include="scripts\jquery.easing.1.3.js" />
     <Content Include="scripts\jquery.min.js" />
     <Content Include="scripts\slides.jquery.js" />
@@ -206,6 +210,13 @@
     <Compile Include="admin\editflashnews.aspx.designer.cs">
       <DependentUpon>editflashnews.aspx</DependentUpon>
     </Compile>
+    <Compile Include="admin\EditHomeContents.aspx.cs">
+      <DependentUpon>EditHomeContents.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\EditHomeContents.aspx.designer.cs">
+      <DependentUpon>EditHomeContents.aspx</DependentUpon>
+    </Compile>
     <Compile Include="admin\editnews.aspx.cs">
       <DependentUpon>editnews.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -226,6 +237,20 @@
     </Compile>
     <Compile Include="admin\editnotifications.aspx.designer.cs">
       <DependentUpon>editnotifications.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\EditTaxUpdate.aspx.cs">
+      <DependentUpon>EditTaxUpdate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\EditTaxUpdate.aspx.designer.cs">
+      <DependentUpon>EditTaxUpdate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\EditWhatsNew.aspx.cs">
+      <DependentUpon>EditWhatsNew.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\EditWhatsNew.aspx.designer.cs">
+      <DependentUpon>EditWhatsNew.aspx</DependentUpon>
     </Compile>
     <Compile Include="admin\HomeContentEditor.aspx.cs">
       <DependentUpon>HomeContentEditor.aspx</DependentUpon>
