--- a/TaxGenieOnline/WebConnectionStrings.config
+++ b/TaxGenieOnline/WebConnectionStrings.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0"?>
 
 <connectionStrings>
-  <add name="TaxGenieDB" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=TaxGenie_Dev;Integrated Security=True"
+  <add name="TaxGenieDB" connectionString="Data Source=USER10-PC;Initial Catalog=Dev_TaxGenie;User ID=sa;Password=pyramidinc"
                  providerName="System.Data.SqlClient"/>
 </connectionStrings>
