changes done in about us page

--- a/TaxGenieOnline/Web.config
+++ b/TaxGenieOnline/Web.config
@@ -23,7 +23,7 @@
             affects performance, set this value to true only 
             during development.
         -->
-		<compilation debug="false">
+		<compilation debug="true">
 			<assemblies>
 				<add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
@@ -166,34 +166,34 @@
 			</authorization>
 		</system.web>
 	</location>
-  <location path="search.aspx">
-    <system.web>
-      <authorization>
-        <deny users="?"/>
-      </authorization>
-    </system.web>
-  </location>
-  <location path="searchdata.aspx">
-    <system.web>
-      <authorization>
-        <deny users="?"/>
-      </authorization>
-    </system.web>
-  </location>
-  <location path="changepwd.aspx">
-    <system.web>
-      <authorization>
-        <deny users="?"/>
-      </authorization>
-    </system.web>
-  </location>
-  <location path="editprofile.aspx">
-    <system.web>
-      <authorization>
-        <deny users="?"/>
-      </authorization>
-    </system.web>
-  </location>
+	<location path="search.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="searchdata.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="changepwd.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="editprofile.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?"/>
+			</authorization>
+		</system.web>
+	</location>
 	<system.net>
 		<mailSettings>
 			<smtp from="taxgenieonline@gmail.com">
