--- a/TaxGenieOnline/Web.config
+++ b/TaxGenieOnline/Web.config
@@ -23,7 +23,7 @@
             affects performance, set this value to true only 
             during development.
         -->
-		<compilation debug="false">
+		<compilation debug="true">
 			<assemblies>
 				<add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
@@ -61,11 +61,11 @@
             during the execution of a request. Specifically, 
             it enables developers to configure html error pages 
             to be displayed in place of a error stack trace.
-  
-    <customErrors mode="On" defaultRedirect="~/GenericErrorPage.htm" >
+   -->
+    <customErrors mode="RemoteOnly" defaultRedirect="~/GenericErrorPage.htm" >
       <error statusCode="401" redirect="~/UnauthorizedAccess.aspx"/>
     </customErrors>
- -->
+
 		<pages>
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
